Separate highlighter into test executable

--- a/examples/test.html
+++ b/examples/test.html
@@ -8,7 +8,7 @@ body { background-color: #000000 }
 .qconid { color: #00ffff }
 .qvarsym { color: #ff00ff }
 .qconsym { color: #ab0010 }
-.literal { color: #0000ff }
+.literal { color: #ffffff }
 .special { color: #ff0000 }
 .reservedop { color: #00ab10 }
 .reservedid { color: #00ff00 }
